Added v1.0.0 Midiboy Core Library

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "avr/libraries/USBMIDI"]
 	path = avr/libraries/USBMIDI
 	url = https://github.com/BlokasLabs/USBMIDI
+[submodule "avr/libraries/Midiboy"]
+	path = avr/libraries/Midiboy
+	url = https://github.com/BlokasLabs/Midiboy
